# src/routes/api.js
@@ -1,6 +1,13 @@
 import express from 'express';
-import { register, login } from '../controllers/auth-controller.js';
-import { sendPasswordRecoveryMail } from '../controllers/password-recovery-controller.js';
+import {
+  register,
+  login,
+  confirmAccount,
+} from '../controllers/auth-controller.js';
+import {
+  sendPasswordRecoveryMail,
+  recoverPassword,
+} from '../controllers/password-recovery-controller.js';
 import { getAllCountries } from '../controllers/countries-controller.js';
 import { authMiddleware } from '../middlewares/index.js';
 
@@ -9,6 +16,8 @@ const router = express.Router();
 router.get('/countries', authMiddleware, getAllCountries);
 router.post('/register', register);
 router.post('/login', login);
+router.post('/confirm-account', confirmAccount);
 router.post('/password/send-recovery-link', sendPasswordRecoveryMail);
+router.post('/password/recover', recoverPassword);
 
 export default router;
