# src/schemas/authorization-schema.js
@@ -3,7 +3,7 @@ import { User } from '../models/index.js';
 
 const determineIfUserExists = (user) => (value, helpers) => {
   if (!user) {
-    return helpers.message('there is no user with this username');
+    return helpers.message('there is no user with this username.');
   }
   return value;
 };
@@ -15,8 +15,16 @@ const loginSchema = async (data) => {
     username: Joi.string()
       .alphanum()
       .custom(determineIfUserExists(user))
-      .required(),
-    password: Joi.string().required(),
+      .required()
+      .messages({
+        'string.base': 'username field should be string.',
+        'string.alphanum': 'username field should be alphanumeric.',
+        'any.required': 'username field is required.',
+      }),
+    password: Joi.string().required().messages({
+      'string.base': 'password field should be string.',
+      'any.required': 'password field is required.',
+    }),
   });
 };
 
